# EnglishQuizz

./: .gitignore  CMakeLists.txt  Dokumentacja.docx  README.md
src/: DEFINITIONS.hpp  main.cpp
src/DataManagement/: ManageData.cpp  ManageData.hpp
src/MiscellaneousUtilities/: MiscUtils.cpp  MiscUtils.hpp
src/QuestionManagement/: ManageQuestions.cpp  ManageQuestions.hpp
src/ScoreManagement/: ManageScores.cpp  ManageScores.hpp
src/UserInterface/: UserInterface.cpp  UserInterface.hpp
src/UserManagement/: UserManagement.cpp  UserManagement.hpp
